# simple-rust-crud-app

./: Cargo.toml  README.md
src/: main.rs  router.rs
src/handlers/: task.rs
src/models/: task.rs
